# shiro51-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
shiro51/: Cargo.toml
shiro51-mcu/: Cargo.toml
shiro51-mcu/src/: addr.rs  cpu.rs  emi.rs  lib.rs  registers.rs
shiro51-mcu/src/instructions/: arithmetic.rs  branching.rs  instruction.rs  logical.rs  mod.rs
shiro51-util/: Cargo.toml
shiro51-util/src/: bit.rs  error.rs  lib.rs
shiro51/src/: emulator.rs  main.rs
src/: main.rs
src/lib/: cpu.rs  instruction.rs  mod.rs
src/lib/memory/: memory.rs  registers.rs
src/lib/ops/: arithmetics.rs  bytes.rs  mod.rs
src/tests/: byte_tests.rs  cpu_tests.rs  mod.rs
