[package]
name = "shiro51-mcu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
log = "0.4"

# utils
bit_field = "0.10.1"
bitflags = "1.3.2"
num_enum = "0.5.7"
hex = "0.4"

# shiro51 libs
shiro51-util = { path = "../shiro51-util" }